# Source

./: .gitignore  CMakeLists.txt  Evolution.cpp  README.md
DataScriptMammal/: IndentifyCheck.chk  adultLearning.scp  babyLearning.scp  biotop_empty.bio  biotop_prairie.bio  biotop_river.bio  childLearning.scp  drink.scp  eat.scp  escape.scp  gazelleTest.xml  grassDry.xml  grassDry2.xml  rock.xml  water_puddle.xml  wooden_fence.xml
Exec/: CybioCore.lib  CybioCoreD.lib  CybiosphereD.lib
ExecOgre/: CybioCore2.lib  cybiosphere.ini  ogre.cfg  plugins.cfg  plugins_d.cfg  resources.cfg  samples.cfg
ExportDll_VC12e/lib/: CybioCore2.lib  CybioCore2D.lib
ExportDll_VC15/lib/: CybioCore3.lib
ExportDll_VC6/lib/: CybioCoreD.lib
ProjectClanClientOgre3D_VC12e/: ClanClientOgre3D.sln  ClanClientOgre3D.vcxproj
ProjectClanClientOgre3D_VC12e/include/: CybiOgre3D.h
ProjectClanClientOgre3D_VC12e/res/: ClanClientOgre3D.rc
ProjectClanClientOgre3D_VC12e/src/: CybiOgre3D.cpp
ProjectClanClientOgre3D_VC15/: ClanClientOgre3D.vcxproj
ProjectClanClientOgre3D_VC15/include/: CybiOgre3D.h  CybiOgre3DOLD.h  CybiOgreFrameListener.h
ProjectClanClientOgre3D_VC15/src/: CybiOgre3D.cpp
ProjectClanClientOgre3D_VC19/: ClanClientOgre3D.sln  ClanClientOgre3D.vcxproj  ClanClientOgre3D.vcxproj.filters
ProjectClanClientOgre3D_VC19/include/: CybiOgre3D.h  CybiOgreApplication.h  (+2 more)
ProjectClanClient_VC12e/: CybioClient.sln  CybioClient.vcxproj  Evolution.cpp
ProjectClanClient_VC15/: CybioClient.sln  CybioClient.vcxproj
ProjectClanClient_VC19/: CybioClient.sln  CybioClient.vcxproj  CybioClient.vcxproj.filters
ProjectClanServer_VC12e/: CybioServer.sln  CybioServer.vcxproj  Evolution.cpp
ProjectClanServer_VC15/: CybioServer.sln  CybioServer.vcxproj  CybioServer.vcxproj.filters
ProjectClanServer_VC19/: CybioServer.sln  CybioServer.vcxproj  CybioServer.vcxproj.filters
ProjectConsole_VC12e/: Evolution.sln  Evolution.vcxproj  UpgradeLog3.XML  UpgradeLog3.htm
ProjectConsole_VC15/: Evolution.vcxproj  Evolution.vcxproj.filters
ProjectConsole_VC19/: Evolution.cpp  Evolution.sln  Evolution.vcxproj  Evolution.vcxproj.filters
ProjectConsole_VC6/: Evolution.cpp  Evolution.dsp  Evolution.dsw  Evolution.ncb  Evolution.opt  Evolution.plg
ProjectCybiOgre3D_VC12e/: CybiOgre3D.vcxproj
ProjectCybiOgre3D_VC15/: CybiOgre3D.sln  CybiOgre3D.vcxproj  CybiOgre3D.vcxproj.filters
ProjectCybiOgre3D_VC19/: CybiOgre3D.sln  CybiOgre3D.vcxproj
ProjectDllCybiocore_VC12e/: CybioCore.vcxproj  CybioCore.vcxproj.filters  UpgradeLog4.XML  UpgradeLog4.htm
ProjectDllCybiocore_VC15/: CybioCore.sln  CybioCore.vcxproj  CybioCore.vcxproj.filters
ProjectDllCybiocore_VC19/: CybioCore.rc  CybioCore.sln  CybioCore.vcxproj  CybioCore.vcxproj.filters  Resource.h
ProjectDllCybiocore_VC6/: CybioCore.dsp  CybioCore.dsw  CybioCore.opt  CybioCore.plg
ProjectStudioFull_VC6/: Cybiosphere.aps  Cybiosphere.clw  Cybiosphere.dsp  Cybiosphere.ncb  Cybiosphere.opt  Cybiosphere.plg  Cybiosphere.rc  resource.h
ProjectStudioServer_VC15/: Cybiosphere.rc  Cybiosphere.sln  Cybiosphere.vcxproj  Cybiosphere.vcxproj.filters  resource.h
ProjectStudioServer_VC19/: Cybiosphere.rc  Cybiosphere.sln  Cybiosphere.vcxproj  Cybiosphere.vcxproj.filters  resource.h
ProjectStudio_VC15/: Cybiosphere.vcxproj  Cybiosphere.vcxproj.filters  resource.h
ProjectStudio_VC19/: Cybiosphere.rc  Cybiosphere.sln  Cybiosphere.vcxproj  Cybiosphere.vcxproj.filters  resource.h
ProjectStudio_VC6/: Cybiosphere.dsp  Cybiosphere.dsw  Cybiosphere.rc  resource.h
ProjectWizardFull_VC6/: ProjectWizard.aps  ProjectWizard.clw  ProjectWizard.dsp  ProjectWizard.ncb  ProjectWizard.opt  ProjectWizard.plg  ProjectWizard.rc  ReadMe.txt
ProjectWizard_VC15/: ProjectWizard.aps  ProjectWizard.sln  ProjectWizard.vcxproj  ProjectWizard.vcxproj.filters  resource.h
ProjectWizard_VC19/: ProjectWizard.rc  ProjectWizard.sln  ProjectWizard.vcxproj  ProjectWizard.vcxproj.filters  resource.h
ProjectWizard_VC6/: ProjectWizard.aps  ProjectWizard.clw  ProjectWizard.dsp  ProjectWizard.dsw  ProjectWizard.opt  ProjectWizard.plg  ProjectWizard.rc  resource.h
Project_VC12e/: Project_VC12e.sln
Project_VC15/: Project_VC15.sln
Project_VC6/: Project_VC6.dsw  Project_VC6.ncb  Project_VC6.opt
WebObserver/: MeasuresCharts.html  MeasuresMultiCharts.html
WpTests/: TestsCybioCore.cpp  TestsCybioCore.h
(+474 files in other folders)
